--- a/app/package.json
+++ b/app/package.json
@@ -15,19 +15,26 @@
     "canvas": "^2.11.2",
     "chart.js": "2.9.4",
     "chartjs-node-canvas": "^4.1.6",
+    "eslint-config-prettier": "^9.1.0",
     "exceljs": "^4.4.0",
     "fs": "^0.0.1-security",
     "telegraf": "^4.16.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^20.11.28",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
     "nodemon": "^2.0.19",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.11.0"
   }
 }
