--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     image: $NODE_IMAGE
     container_name: 
       'tgbot'
-    working_dir: /usr/src/app
+    working_dir: /usr/src/bot
     volumes:
-      - ./app:/usr/src/app
+      - ./bot:/usr/src/bot
     env_file:
         - ./.env
     command: "/bin/sh -c 'yarn start:dev'"
